update lossless jpeg
Former-commit-id: 6fd6d28bd64865d35f1ee92d41cde61f714bcca2

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/icom_method/00_from_icom_test.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/icom_method/00_from_icom_test.ipynb
@@ -14,6 +14,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import scipy.interpolate"
    ]
@@ -46,6 +47,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "results_dir = pathlib.Path(r'S:\\Physics\\Programming\\results\\Wlutz_Arc\\2020-01-16_4299')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "images = list(pathlib.Path(r'S:\\Temp').glob('**/*.jpg'))\n",
     "# images"
    ]
@@ -66,8 +76,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "timestamps = [\n",
+    "diff = np.diff(icom_data['Monitor Units'])\n",
+    "diff[diff<0] = 0 \n",
+    "\n",
+    "diff = diff[diff!=0]\n",
+    "\n",
+    "plt.hist(diff, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_timestamps = [\n",
     "    pd.Timestamp(datetime.datetime.fromtimestamp(os.path.getmtime(path)))\n",
     "    for path in images\n",
     "]\n",
@@ -81,8 +112,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "pymedphys._losslessjpeg.imread()"
+    "\n"
    ]
   },
   {
@@ -174,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adjusted_timestamps = np.array(adjusted_timestamps).astype('datetime64[ms]').astype('uint64')"
+    "# adjusted_timestamps = np.array(adjusted_timestamps).astype('datetime64[ms]').astype('uint64')"
    ]
   },
   {
@@ -183,18 +213,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_interpolator(adjusted_timestamps, data):\n",
-    "    interpolation = scipy.interpolate.interp1d(adjusted_timestamps, data)\n",
-    "    def interpolator(timestamp):\n",
-    "        timestamp = np.datetime64(timestamp).astype('datetime64[ms]').astype('uint64')\n",
-    "        return interpolation(timestamp)\n",
-    "    \n",
-    "    return interpolator\n",
+    "def convert_timestamp(timestamp):\n",
+    "    return np.array(timestamp).astype('datetime64[ms]').astype('float64') / 60000\n",
     "\n",
-    "keys = ['Gantry', 'Collimator', 'MLC distance at CRA', 'Jaw distance']\n",
+    "class Interpolator:\n",
+    "    def __init__(self, timestamps, data):\n",
+    "        interpolation = scipy.interpolate.UnivariateSpline(\n",
+    "            convert_timestamp(timestamps), data, k=1, s=0)\n",
+    "        self._interpolation = interpolation\n",
+    "\n",
+    "    def __call__(self, timestamp):\n",
+    "        return self._interpolation(convert_timestamp(timestamp))\n",
+    "\n",
+    "    def derivative(self, timestamp):\n",
+    "        dt = 1/60\n",
+    "        minutes = convert_timestamp(timestamp)\n",
+    "        return (self._interpolation(minutes + dt/2) - self._interpolation(minutes - dt/2)) / dt\n",
+    "\n",
+    "keys = ['Gantry', 'Collimator', 'MLC distance at CRA', 'Jaw distance', 'Monitor Units']\n",
     "\n",
     "interpolators = {\n",
-    "    key: create_interpolator(adjusted_timestamps, icom_data['Gantry'])\n",
+    "    key: Interpolator(adjusted_timestamps, icom_data[key])\n",
     "    for key in keys\n",
     "}"
    ]
@@ -205,51 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interpolators['Gantry']('2020-01-16 17:00:33.500')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.datetime64('2020-01-16 17:57:29').astype('uint64')"
+    "interpolators['Monitor Units']('2020-01-16 17:00:33.500')"
    ]
   },
   {
@@ -258,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gantry_interp(np.datetime64('2020-01-16 17:57:29').astype('datetime64[ms]'))"
+    "interpolators['Monitor Units'].derivative('2020-01-16 17:07:19')"
    ]
   },
   {
@@ -267,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.datetime64('2020-01-16 17:57:29').astype('uint64')"
+    "match_mask = np.abs(icom_data['Timestamp'].astype(np.datetime64)[:, None] - np.array(image_timestamps).astype(np.datetime64)[None, :]) < np.timedelta64(510, 'ms')"
    ]
   },
   {
@@ -276,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "int_timestamps"
+    "icom_index, image_index = np.where(match_mask)"
    ]
   },
   {
@@ -284,7 +279,135 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "icom_data['Timestamp']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, unique_index = np.unique(image_index, return_index=True)\n",
+    "icom_index = icom_index[unique_index]\n",
+    "image_index = image_index[unique_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energies = icom_data['Energy'][icom_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_image_timestamps = np.array(image_timestamps).astype(np.datetime64)[image_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(image_timestamps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_image_paths = np.array(images).astype(str)[image_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_direction(timestamps):\n",
+    "    gantry_derivative = interpolators['Gantry'].derivative(valid_image_timestamps)\n",
+    "    result = np.ones_like(timestamps).astype(str)\n",
+    "    result[:] = ''\n",
+    "    result[gantry_derivative<-1] = 'counter-clockwise'\n",
+    "    result[gantry_derivative>1] = 'clockwise'\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_values = {\n",
+    "    'Timestamp': valid_image_timestamps,\n",
+    "    'Path': valid_image_paths,\n",
+    "    'Energy': np.array(energies).astype(str),\n",
+    "    'Rough Dose Rate': interpolators['Monitor Units'].derivative(valid_image_timestamps),\n",
+    "    'Direction': get_direction(valid_image_timestamps),\n",
+    "    'Gantry': interpolators['Gantry'](valid_image_timestamps),\n",
+    "    'Collimator': interpolators['Collimator'](valid_image_timestamps),\n",
+    "    'Width': interpolators['MLC distance at CRA'](valid_image_timestamps),\n",
+    "    'Length': interpolators['Jaw distance'](valid_image_timestamps)\n",
+    "}\n",
+    "\n",
+    "per_image_data = pd.DataFrame(image_values)\n",
+    "per_image_data.to_csv(results_dir.joinpath('interpolated_iCom_results.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_arrays = [\n",
+    "    pymedphys._losslessjpeg.imread(path) for path in images\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_arrays[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 50\n",
+    "current_data = per_image_data.iloc[i]\n",
+    "current_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_lengths = [current_data['Width'], current_data['Length']]\n",
+    "edge_lengths"
+   ]
   }
  ],
  "metadata": {
