remove bb_at_bounds test file

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/icom_method/00_from_icom_test.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/icom_method/00_from_icom_test.ipynb
@@ -38,7 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymedphys._losslessjpeg"
+    "import pymedphys._losslessjpeg\n",
+    "import pymedphys._wlutz.core\n",
+    "import pymedphys._wlutz.reporting\n",
+    "import pymedphys._wlutz.iview\n",
+    "import pymedphys._vendor.pylinac.winstonlutz"
    ]
   },
   {
@@ -408,6 +412,50 @@
     "edge_lengths = [current_data['Width'], current_data['Length']]\n",
     "edge_lengths"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bb_diameter = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rotation = current_data['Collimator']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y, img = pymedphys._wlutz.iview.iview_image_transform(image_arrays[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pymedphys._wlutz.core.find_field_and_bb(x, y, img, edge_lengths, bb_diameter, fixed_rotation=rotation, rounding=False, pylinac_tol=np.inf)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
