iterating wlutz with icom
Former-commit-id: c2f389a8016551ef26adb0fe939fcad3d86794e3 [formerly bbf3f2d6ac81ea77630cca10b893db3365297704]
Former-commit-id: ae882635ffa55c0306af0ea9485d58c92b2decb5

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/icom_method/00_from_icom_test.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/icom_method/00_from_icom_test.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = list(pathlib.Path(r'S:\\Temp').glob('**/*.jpg'))\n",
+    "image_paths = list(pathlib.Path(r'S:\\Temp').glob('**/*.jpg'))\n",
     "# images"
    ]
   },
@@ -102,10 +102,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_timestamps = [\n",
-    "    pd.Timestamp(datetime.datetime.fromtimestamp(os.path.getmtime(path)))\n",
-    "    for path in images\n",
-    "]\n",
+    "initial_image_timestamps = np.array([\n",
+    "    datetime.datetime.fromtimestamp(os.path.getmtime(path))\n",
+    "    for path in image_paths\n",
+    "]).astype(np.datetime64)\n",
     "# timestamps"
    ]
   },
@@ -115,92 +115,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "approximate_saving_time = np.timedelta64(1500, 'ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_diff = np.diff(initial_image_timestamps)\n",
+    "time_diff = np.concatenate([time_diff, [time_diff[-1]]])\n",
+    "image_adjusted_timestamps = initial_image_timestamps + approximate_saving_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "icom_unique_timestamps, counts = np.unique(icom_data['Timestamp'], return_counts=True)\n",
+    "icom_unique_timestamps = icom_unique_timestamps.astype(np.datetime64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "icom_adjusted_timestamps = []\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.unique([1,1,1,2], return_counts=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unique_timestamps, counts = np.unique(icom_data['Timestamp'], return_counts=True)\n",
-    "unique_timestamps = unique_timestamps.astype(np.datetime64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stamp = datetime.datetime.fromisoformat(unique_timestamps[0])\n",
-    "stamp + datetime.timedelta(500, 'ms')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unique_timestamps[0] + np.timedelta64(500, 'ms')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.timedelta64(20, 'D')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.unique(counts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_dt = 1 / (counts + 1)\n",
-    "time_dt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adjusted_timestamps = []\n",
-    "\n",
-    "for base_timestamp, count in zip(unique_timestamps, counts):\n",
+    "for base_timestamp, count in zip(icom_unique_timestamps, counts):\n",
     "    time_dt = 1000 / (count)\n",
     "    \n",
     "    current_dt = time_dt / 2\n",
     "    for i in range(count):\n",
-    "        adjusted_timestamps.append(base_timestamp + np.timedelta64(int(current_dt), 'ms'))\n",
-    "        current_dt += time_dt"
+    "        icom_adjusted_timestamps.append(base_timestamp + np.timedelta64(int(current_dt), 'ms'))\n",
+    "        current_dt += time_dt\n",
+    "        \n",
+    "        \n",
+    "icom_adjusted_timestamps = np.array(icom_adjusted_timestamps).astype('datetime64[ms]')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -237,7 +208,7 @@
     "keys = ['Gantry', 'Collimator', 'MLC distance at CRA', 'Jaw distance', 'Monitor Units']\n",
     "\n",
     "interpolators = {\n",
-    "    key: Interpolator(adjusted_timestamps, icom_data[key])\n",
+    "    key: Interpolator(icom_adjusted_timestamps, icom_data[key])\n",
     "    for key in keys\n",
     "}"
    ]
@@ -248,25 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interpolators['Monitor Units']('2020-01-16 17:00:33.500')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "interpolators['Monitor Units'].derivative('2020-01-16 17:07:19')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "match_mask = np.abs(icom_data['Timestamp'].astype(np.datetime64)[:, None] - np.array(image_timestamps).astype(np.datetime64)[None, :]) < np.timedelta64(510, 'ms')"
+    "match_mask = np.abs(icom_adjusted_timestamps[:, None] - image_adjusted_timestamps[None, :]) < np.timedelta64(510, 'ms')"
    ]
   },
   {
@@ -276,15 +229,6 @@
    "outputs": [],
    "source": [
     "icom_index, image_index = np.where(match_mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "icom_data['Timestamp']"
    ]
   },
   {
@@ -313,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "valid_image_timestamps = np.array(image_timestamps).astype(np.datetime64)[image_index]"
+    "valid_image_timestamps = np.array(image_adjusted_timestamps).astype(np.datetime64)[image_index]"
    ]
   },
   {
@@ -322,16 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(image_timestamps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "valid_image_paths = np.array(images).astype(str)[image_index]"
+    "valid_image_paths = np.array(image_paths).astype(str)[image_index]"
    ]
   },
   {
@@ -364,8 +299,8 @@
     "    'Direction': get_direction(valid_image_timestamps),\n",
     "    'Gantry': interpolators['Gantry'](valid_image_timestamps),\n",
     "    'Collimator': interpolators['Collimator'](valid_image_timestamps),\n",
-    "    'Width': interpolators['MLC distance at CRA'](valid_image_timestamps),\n",
-    "    'Length': interpolators['Jaw distance'](valid_image_timestamps)\n",
+    "    'Width': interpolators['MLC distance at CRA'](valid_image_timestamps) * 10,\n",
+    "    'Length': interpolators['Jaw distance'](valid_image_timestamps) * 10\n",
     "}\n",
     "\n",
     "per_image_data = pd.DataFrame(image_values)\n",
@@ -378,9 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_arrays = [\n",
-    "    pymedphys._losslessjpeg.imread(path) for path in images\n",
-    "]"
+    "image_results = {}"
    ]
   },
   {
@@ -389,7 +322,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_arrays[0]"
+    "bb_diameter = 8\n",
+    "penumbra = 2\n",
+    "\n",
+    "# image_results = {}\n",
+    "\n",
+    "for i, path in enumerate(image_paths):\n",
+    "    current_data = per_image_data.iloc[i]\n",
+    "    timestamp = current_data['Timestamp']\n",
+    "    \n",
+    "    try:\n",
+    "        image_results[timestamp]\n",
+    "        continue\n",
+    "    except KeyError:\n",
+    "        pass    \n",
+    "    \n",
+    "    print(path)\n",
+    "    loaded_image = pymedphys._losslessjpeg.imread(path)\n",
+    "    x, y, img = pymedphys._wlutz.iview.iview_image_transform(loaded_image)\n",
+    "\n",
+    "    print(current_data)\n",
+    "    edge_lengths = [current_data['Width'], current_data['Length']]\n",
+    "    rotation = current_data['Collimator']\n",
+    "    \n",
+    "\n",
+    "    try:\n",
+    "        bb_centre, field_centre, field_rotation = pymedphys._wlutz.core.find_field_and_bb(\n",
+    "            x, y, img, edge_lengths, bb_diameter, penumbra=penumbra, fixed_rotation=rotation, rounding=False, ignore_pylinac=True)\n",
+    "        \n",
+    "        image_results[timestamp] = {\n",
+    "            'BB Centre': bb_centre,\n",
+    "            'Field Centre': field_centre\n",
+    "        }\n",
+    "\n",
+    "        pymedphys._wlutz.reporting.image_analysis_figure(\n",
+    "            x,\n",
+    "            y,\n",
+    "            img,\n",
+    "            bb_centre,\n",
+    "            field_centre,\n",
+    "            field_rotation,\n",
+    "            bb_diameter,\n",
+    "            edge_lengths,\n",
+    "            penumbra,\n",
+    "        )\n",
+    "\n",
+    "        plt.show()\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        pass"
    ]
   },
   {
@@ -399,6 +380,16 @@
    "outputs": [],
    "source": [
     "i = 50\n",
+    "loaded_image = pymedphys._losslessjpeg.imread(image_paths[i])\n",
+    "x, y, img = pymedphys._wlutz.iview.iview_image_transform(loaded_image)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "current_data = per_image_data.iloc[i]\n",
     "current_data"
    ]
@@ -419,7 +410,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_diameter = 8"
+    "bb_diameter = 8\n",
+    "penumbra = 2"
    ]
   },
   {
@@ -428,7 +420,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotation = current_data['Collimator']"
+    "rotation = current_data['Collimator']\n",
+    "rotation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bb_centre, field_centre, field_rotation = pymedphys._wlutz.core.find_field_and_bb(\n",
+    "    x, y, img, edge_lengths, bb_diameter, penumbra=penumbra, fixed_rotation=rotation, rounding=False, ignore_pylinac=True)"
    ]
   },
   {
@@ -437,17 +447,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y, img = pymedphys._wlutz.iview.iview_image_transform(image_arrays[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pymedphys._wlutz.core.find_field_and_bb(x, y, img, edge_lengths, bb_diameter, fixed_rotation=rotation, rounding=False, pylinac_tol=np.inf)\n",
-    "    "
+    "pymedphys._wlutz.reporting.image_analysis_figure(\n",
+    "    x,\n",
+    "    y,\n",
+    "    img,\n",
+    "    bb_centre,\n",
+    "    field_centre,\n",
+    "    field_rotation,\n",
+    "    bb_diameter,\n",
+    "    edge_lengths,\n",
+    "    penumbra,\n",
+    ")"
    ]
   },
   {
