change kernel to Python 3
Former-commit-id: 71c034e076f579a589c8db4c4f5f0a44ffeba40d

--- a/docs/howto/gamma/from-dicom.ipynb
+++ b/docs/howto/gamma/from-dicom.ipynb
@@ -277,9 +277,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pymedphys-master",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pymedphys-master"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
