remaining icom from test

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/icom_method/00_from_icom_test.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/icom_method/00_from_icom_test.ipynb
@@ -327,7 +327,7 @@
     "\n",
     "# image_results = {}\n",
     "\n",
-    "for i, path in enumerate(image_paths):\n",
+    "for i, path in enumerate(valid_image_paths):\n",
     "    current_data = per_image_data.iloc[i]\n",
     "    timestamp = current_data['Timestamp']\n",
     "    \n",
