remove ignore_pylinac parameter
Former-commit-id: d808ad1247e3790b26bdb5ca7957f2f8da4a503c [formerly 71cc6a9010bf30fe7e36fd79f02cdf9cd67d0f59]
Former-commit-id: e3ce6ef16d3d68f26aaf62be048a17801b4ae33e

--- a/docs/howto/wlutz/varian-dicom-example.ipynb
+++ b/docs/howto/wlutz/varian-dicom-example.ipynb
@@ -7,7 +7,7 @@
     "# Winston Lutz from Varian DICOM images\n",
     "\n",
     "**Disclaimer**: All pixel size extraction code is a first pass **guess**.\n",
-    "I do not have access to a Varian Linac."
+    "I do not have access to a Varian Linac. Validation of this example from a Varian user would be appreciated. Please raise an issue via https://github.com/pymedphys/pymedphys/issues/new to either confirm that you have been able to validate this or provide a counter example to where there are issues here."
    ]
   },
   {
@@ -31,9 +31,7 @@
    "outputs": [],
    "source": [
     "import pymedphys\n",
-    "import pymedphys._wlutz.core\n",
-    "import pymedphys._wlutz.reporting\n",
-    "import pymedphys._vendor.pylinac.winstonlutz"
+    "import pymedphys.wlutz"
    ]
   },
   {
@@ -42,65 +40,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pymedphys.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def display_markdown(string):\n",
-    "    IPython.display.display(IPython.display.Markdown(string))\n",
-    "    \n",
-    "display_markdown('## Example heading')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dicom_wlutz_paths = pymedphys.zip_data_paths('denis_wlutz_images.zip')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dicom_wlutz_paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dicom_files = [pydicom.read_file(str(path), force=True) for path in dicom_wlutz_paths]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm_header = dicom_files[0]\n",
-    "dcm_header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm_header.ImagePlanePixelSpacing"
+    "dicom_wlutz_paths = pymedphys.zip_data_paths('denis_wlutz_images.zip')\n",
+    "dicom_files = [pydicom.read_file(str(path), force=True) for path in dicom_wlutz_paths]\n",
+    "dcm_header = dicom_files[0]"
    ]
   },
   {
@@ -231,19 +173,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_initial_centre(x, y, img):\n",
-    "    wl_image = pymedphys._vendor.pylinac.winstonlutz.WLImageOld(img)\n",
-    "    min_x = np.min(x)\n",
-    "    dx = x[1] - x[0]\n",
-    "    min_y = np.min(y)\n",
-    "    dy = y[1] - y[0]\n",
+    "def display_markdown(string):\n",
+    "    IPython.display.display(IPython.display.Markdown(string))\n",
     "    \n",
-    "    field_centre = [\n",
-    "        wl_image.field_cax.x * dx + min_x,\n",
-    "        wl_image.field_cax.y * dy + min_y\n",
-    "    ]\n",
-    "    \n",
-    "    return field_centre"
+    "display_markdown('## Example heading')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bb_centre, field_centre, field_rotation = pymedphys.wlutz.find_field_and_bb(\n",
+    "    x,\n",
+    "    y,\n",
+    "    img,\n",
+    "    edge_lengths,\n",
+    "    bb_diameter,\n",
+    "    penumbra=2,\n",
+    "    fixed_rotation=collimator_angle,\n",
+    "    rounding=False,\n",
+    "    pylinac_tol=0.2,\n",
+    "    ignore_pylinac=False\n",
+    ")"
    ]
   },
   {
@@ -253,23 +206,6 @@
    "outputs": [],
    "source": [
     "def analysis(x, y, img, collimator_angle):\n",
-    "    field = pymedphys._wlutz.imginterp.create_interpolated_field(x, y, img)\n",
-    "    initial_centre = get_initial_centre(x, y, img)\n",
-    "    \n",
-    "    pymedphys._wlutz.reporting.image_analysis_figure(\n",
-    "        x,\n",
-    "        y,\n",
-    "        img,\n",
-    "        None,\n",
-    "        initial_centre,\n",
-    "        collimator_angle,\n",
-    "        bb_diameter,\n",
-    "        edge_lengths,\n",
-    "        penumbra,\n",
-    "    )\n",
-    "    \n",
-    "    plt.title('Initial Centre')\n",
-    "\n",
     "    field_centre, field_rotation = pymedphys._wlutz.findfield.field_centre_and_rotation_refining(\n",
     "        field, edge_lengths, penumbra, initial_centre, pylinac_tol=np.inf, fixed_rotation=collimator_angle\n",
     "    )    \n",
@@ -278,7 +214,7 @@
     "        field, bb_diameter, edge_lengths, penumbra, field_centre, field_rotation, ignore_pylinac=True\n",
     "    )\n",
     "    \n",
-    "    pymedphys._wlutz.reporting.image_analysis_figure(\n",
+    "    pymedphys.wlutz.reporting.image_analysis_figure(\n",
     "        x,\n",
     "        y,\n",
     "        img,\n",
